syntax = "proto3";

package internal;
option go_package = "github.com/livekit/psrpc/internal";

import "google/protobuf/any.proto";

message Request {
  string request_id = 1;
  string client_id = 2;
  int64 sent_at = 3;
  int64 expiry = 4;
  bool multi = 5;
  google.protobuf.Any request = 6;
}

message Response {
  string request_id = 1;
  string server_id = 2;
  int64 sent_at = 3;
  google.protobuf.Any response = 4;
  string error = 5;
}

message ClaimRequest {
  string request_id = 1;
  string server_id = 2;
  float affinity = 3;
}

message ClaimResponse {
  string request_id = 1;
  string server_id = 2;
}
